Bug 439290 - No Reports available
Summary: No Reports available
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: git (master)
Platform: Microsoft Windows Microsoft Windows
: NOR critical
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-29 09:39 UTC by chrisbrewer
Modified: 2024-12-19 10:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chrisbrewer 2021-06-29 09:39:32 UTC
SUMMARY


STEPS TO REPRODUCE
1. I unwittingly loaded Master Build version 1177
2. The file opened with all icons present
3. 

OBSERVED RESULT
The report section was blank (ie no reports available)

EXPECTED RESULT
To be able to access reports

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Windows 10 Family  21H1
Comment 1 Thomas Baumgart 2021-06-29 13:24:31 UTC
Git commit 9385d33363584f5056423a87e406faa24ad7d54b by Thomas Baumgart.
Committed on 29/06/2021 at 13:24.
Pushed by tbaumgart into branch 'master'.

Don't forget to refresh the reports view

M  +1    -0    kmymoney/plugins/views/reports/kreportsview_p.h

https://invent.kde.org/office/kmymoney/commit/9385d33363584f5056423a87e406faa24ad7d54b