Don't forget to refresh the reports view

BUG: 439290